--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     const nameInputElement = document.getElementById("name-input");
     const comInputElement = document.getElementById("com-input");
     const comentElement = document.querySelectorAll('.comment');
-
+    
     const fetchPromise = fetch("https://wedev-api.sky.pro/api/v1/:julya-nyanchuk/comments", {
       method: "GET",
     });
@@ -136,7 +136,7 @@
       const comHtml = coments.map((coment, index) =>{
         return `<li class="comment" >
           <div class="comment-header">
-            <div>${coment.author}</div>
+            <div>${coment.author.name}</div>
             <div>${coment.date}</div>
           </div>
           <div class="comment-body">
