--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <div class="container">
+      <div class="loader">Пожалуйста подождите, комментарии загружаются...</div>
       <ul class="comments" id="list">
         <!-- <li class="comment">
           <div class="comment-header">
