--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <div class="loader">Пожалуйста подождите, комментарии загружаются...</div>
       <ul class="comments" id="list">
-        <!-- <li class="comment">
+        <li class="comment">
           <div class="comment-header">
             <div>Глеб Фокин</div>
             <div>12.02.22 12:18</div>
@@ -43,7 +43,7 @@
               <button class="like-button"></button>
             </div>
           </div>
-        </li> -->
+        </li>
       </ul>
       <div class="add-form">
         <input
@@ -64,7 +64,8 @@
           <button class="add-form-button" id="add-button">Написать</button>
         </div>
       </div>
-    </div>
+    </div> -->
+    <div id="root"></div>
   </body>
   <script type="module" src="main.js"></script>
 </html>
