--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="root"></div>
   </body>
-  <script type="module" src="main.js"></script>
+  <!-- <script type="module" src="main.js"></script> -->
+  <script src="./dist/main.js"></script>
 </html>
